<resources>
    <string name="app_name">Wingman</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name(optional)</string>
    <string name="prompt_phone">Phone(mobile)</string>
    <string name="prompt_status">Say something about you...</string>

    <string name="action_invite">Invite</string>
    <string name="action_uninvite">Uninvite</string>
    <string name="action_add">Add</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_fbsign_in">Sign in with fb</string>
    <string name="action_fbsign_up">Sign up with fb</string>
    <string name="action_profile_update">Complete profile</string>
    <string name="action_sign_up">New user Signup</string>
    <string name="btntxt_sign_up">Signup</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pick_contact">PickContact</string>
    <string name="emailtag">emailtags</string>

    <!-- facebook appid !-->
    <string name="app_id">1535740343360522</string>


    <!-- TODO: Remove or change this placeholder text -->


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="Attachment">Attachment</string>
    <!-- side menu!-->
    <string name="enter_group_name">Enter group name</string>
    <string name="Connect">Connect</string>
    <string name="Request">Request</string>
    <string name="Groups">Groups</string>
    <string name="Messages">Messages</string>
    <string name="Settings">Settings</string>
    <string name="CreateGroup">Create Group</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_connections_and_requests">ConnectionsAndRequests</string>


    <string name="connections_userid">userid</string>
    <string name="connections_POSITIONS">position</string>
    <string name="connections_groupid">groupid</string>
    <string name="title_activity_settings">Settings</string>
    
    <!--   settings text  !-->
    
    <string name="only_male">Only Male users in search result</string>
    <string name="only_female">Only Female users in search result</string>
    <string name="both">Both</string>



    <string name="specific_miles">Specific miles from my location</string>
    <string name="specific_km">Specific kilometers from my location</string>
    <string name="vibrate_phone">Vibrate phone when notification arrives</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
