<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.wingman.ui.activities.Settings"
    tools:showIn="@layout/activity_settings">
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
        android:text="Gender"
        android:id="@+id/gndrtxt"
        android:layout_width="match_parent"
        android:layout_margin="10dp"

        android:layout_height="wrap_content" />
    <CheckBox
        android:text="Male"
        android:id="@+id/gndrmale"
        android:layout_margin="10dp"
        android:clickable="false"
        android:layout_below="@+id/gndrtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:text="Female"
        android:layout_width="wrap_content"
        android:id="@+id/gndrfemale"
        android:layout_margin="10dp"
        android:clickable="false"
        android:layout_below="@+id/gndrmale"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Show me"
        android:id="@+id/showmelabel"
        android:layout_width="match_parent"

        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                   android:text="@string/only_male"
                android:id="@+id/maletxt"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/maleswitch"
                android:layout_width="wrap_content"
           android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/only_female"
                android:id="@+id/femaletxt"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/femaleSwitch"
                android:layout_width="wrap_content"

                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/both"
                android:id="@+id/bothtxt"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/bothstch"
                android:layout_width="wrap_content"

                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


    <TextView
        android:text="Limit Search To"
        android:id="@+id/showdistance"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/specific_km"
                android:id="@+id/miletext"
                android:layout_width="match_parent"
android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
    <android.support.v7.widget.SwitchCompat
        android:id="@+id/mileswitch"
        android:layout_width="wrap_content"
       android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/specific_miles"
                android:id="@+id/kmtexttext"
                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/kmswitch"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dsb_min="2"
            app:dsb_max="50"
            android:id="@+id/discreetSeek"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/vibrate_phone"

                android:layout_width="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/vibratephone"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
